abhyram-backend/force-app/main/default/objects/Project__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <label>Billable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>