abhyram-backend/force-app/main/default/objects/Project__c/fields/Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>Budget_Hours__c</fullName>
    <label>Budget Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>