abhyram-backend/force-app/main/default/objects/Project__c/fields/Consumed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Hours__c</fullName>
    <label>Consumed Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>