abhyram-backend/force-app/main/default/objects/Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Projects</relationshipName>
</CustomField>