abhyram-backend/force-app/main/default/objects/Project__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <label>Project Code</label>
    <type>Text</type>
    <length>20</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>