abhyram-backend/force-app/main/default/objects/Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <label>Project Manager</label>
    <type>Lookup</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Managed_Projects</relationshipName>
</CustomField>