abhyram-backend/force-app/main/default/objects/Project__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name Detail</label>
    <type>Text</type>
    <length>100</length>
</CustomField>