abhyram-backend/force-app/main/default/objects/Project__c/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>End Date must be after Start Date</errorMessage>
</ValidationRule>